tests/NormalTests/paczka2/big_fuzzy/16421324.err
Error in line 8: S660 S660 33,8
Error in line 5: HyeNNNSTX A803 24,5
Error in line 15: S660 S478 56,7
Error in line 16: HyeNNNSTX S478 99,9
Error in line 27: S660 S478 24,6
Error in line 39: 0mVQL S466 88,8
Error in line 44: 0mVQL S478 68,1
Error in line 29: S660 S660 69,3
Error in line 54: S660 S466 68,1
Error in line 61: 0mVQL A803 47,1
Error in line 65: HyeNNNSTX 803 62,8
Error in line 62: NTJ6YueSnkY S660 419,5
Error in line 75: jt13 S466 82,4
Error in line 83: I06Sm A803 75,5
Error in line 93: x5pmAs S660 13,7
Error in line 97: x5pmAs S478 1,0
Error in line 95: HyeNNNSTX S466 21,4
Error in line 100: HyeNNNSTX A803 75,3
Error in line 103: HyeNNNSTX S660 84,9
Error in line 102: jt13 S466 21,5
Error in line 122: HyeNNNSTX S478 94,4
Error in line 123: I06Sm A803 56,6
Error in line 137: HyeNNNSTX A803 71,3
Error in line 136: I06Sm S466 30,1
Error in line 139: HyeNNNSTX S466 84,3
Error in line 144: HyeNNNSTX A803 79,2
Error in line 132: x5pmAs S466 2,6
Error in line 158: x5pmAs S478 79,8
Error in line 160: x5pmAs A803 87,4
Error in line 148: jt13 S660 44,9
Error in line 166: x5pmAs S]]0 35,2
Error in line 162: x5pmAs S660 19,9
Error in line 174: jt13 S466 61,3
Error in line 176: 0mVQL S660 48,1
Error in line 180: 0mVQL S478 53,3
Error in line 182: 0mVQL S466 16,4
Error in line 188: jt13 S660 63,3
Error in line 197: 0mVQL S466 26,2
Error in line 204: NTJ6YueSnkY A803 76,3
Error in line 238: 0mVQL S466 2,7
Error in line 241: 0mVQL S660 97,9
Error in line 237: NTJ6YueSnkY S478 34,7
Error in line 243: 0mVQL S466 13,2
Error in line 249: S660 A803 171,33
